<?xml version="1.0" encoding="utf-8"?>
<resources>
    <!--universal strings-->
    <string name="mm_string_universal_order">采购入库</string>
    <string name="mm_string_universal_order_search">查看采购入库记录</string>
    <string name="mm_string_universal_order_apply">申请采购入库</string>
    <string name="mm_string_universal_order_trail_first">采购入库初审</string>
    <string name="mm_string_universal_order_trail_last">采购入库终审</string>
    <string name="mm_string_universal_entry">入库</string>
    <string name="mm_string_universal_entry_search">查看入库记录</string>
    <string name="mm_string_universal_entry_apply">申请入库</string>
    <string name="mm_string_universal_entry_confirm">确认入库</string>
    <string name="mm_string_universal_delivery">出库</string>
    <string name="mm_string_universal_delivery_search">查看出库记录</string>
    <string name="mm_string_universal_delivery_apply">申请出库</string>
    <string name="mm_string_universal_delivery_confirm">确认出库</string>
    <string name="mm_string_universal_repair">维修</string>
    <string name="mm_string_universal_repair_search">查看维修记录</string>
    <string name="mm_string_universal_repair_apply">申请维修</string>
    <string name="mm_string_universal_repair_confirm">确认维修</string>
    <string name="mm_string_universal_scrap">报废</string>
    <string name="mm_string_universal_scrap_search">查看报废记录</string>
    <string name="mm_string_universal_scrap_apply">申请报废</string>
    <string name="mm_string_universal_scrap_trail_first">报废初审</string>
    <string name="mm_string_universal_scrap_trail_last">报废终审</string>
    <string name="mm_string_universal_notification">系统通知</string>

    <!--strings for activity_home-->
    <string name="mm_string_activity_home_front">首页</string>
    <string name="mm_string_activity_home_management">管理</string>
    <string name="mm_string_activity_home_message">消息</string>
    <string name="mm_string_activity_home_mine">我的</string>

    <!--strings for fragment_mine-->
    <string name="mm_string_fragment_mine_ui">界面设置</string>
    <string name="mm_string_fragment_mine_notification">通知设置</string>
    <string name="mm_string_fragment_mine_security">安全设置</string>
    <string name="mm_string_fragment_mine_update">检查更新</string>
    <string name="mm_string_fragment_mine_contacts">联系我们</string>

    <!--string for views_adapter_fixture_card-->
    <string name="mm_string_views_adapter_fixture_card_deadline">截止时间</string>
    <string name="mm_string_views_adapter_fixture_card_location">定位</string>
    <string name="mm_string_views_adapter_fixture_card_risk">故障风险</string>

    <!--string for views_adapter_conversation_bar-->
    <string name="mm_string_views_adapter_conversation_bar_tag_top">置顶</string>
</resources>